--- a/templates/component/_project_list.html.twig
+++ b/templates/component/_project_list.html.twig
@@ -34,7 +34,7 @@
         <div class="grid card-deck col-12">
             {% for project in projects %}
                 {% if project.status is not same as 0 or is_granted('ROLE_ADMIN') or app.user and app.user.participants.owner %}
-                    <div class="element-item {% for sdg in project.sdgs %}{{ sdg.identifier }} {% endfor %} status_{{ project.status}} col-md-2 col-sm-12 vh-50 m-3 p-0 card" data-commonskills="{{ project.commonSkillsWithUser|length }}" >
+                    <div class="element-item {% for sdg in project.sdgs %}{{ sdg.identifier }} {% endfor %} status_{{ project.status}} col-lg-2 col-md-3 col-sm-10 col-12 vh-50 m-3 p-0 card" data-commonskills="{{ project.commonSkillsWithUser|length }}" >
                         <div class="position-relative">
                             <a href="{{ path('project_show', {'id': project.id}) }}">
                                 {% if project.cover == 'DEFAULT_COVER.png' %}
