--- a/templates/component/homepage/_header.html.twig
+++ b/templates/component/homepage/_header.html.twig
@@ -21,7 +21,6 @@
                     <a class="dropdown-item" href="/#questionsanswers">Q & A</a>
                 </div>
             </li>
-
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Projects
@@ -45,6 +44,11 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('article_index') }}">Blog</a>
+            </li>
+            <li class="nav-item">
+                {% if is_granted('ROLE_ADMIN')%}
+                    <a class="nav-link" href="{{ path('administration') }}">Administration</a>
+                {% endif %}
             </li>
         </ul>
         <ul class="navbar-nav text-blueish form-inline">
